--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 /**app.wxss**/
+
 .container {
   height: 100%;
   display: flex;
@@ -7,15 +8,19 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}
 
 .dz-btn {
-    margin-top: 40rpx;
-    background: #61a1ff;
-    color: white;
-    line-height: 80rpx;
-    text-align: center;
-    border:1px solid #538bdf;    
-    border-top-color: #84a5d7;
-    border-radius: 4px;
+  margin-top: 20rpx;
+  margin-bottom: 20rpx;
+  background: #61a1ff;
+  color: white;
+  line-height: 80rpx;
+  text-align: center;
+  border: 0;
+  border-radius: 4px;
+}
+
+.hidden {
+  display: none !important;
 }
