--- a/pages/dingzhi/dingzhi.wxml
+++ b/pages/dingzhi/dingzhi.wxml
@@ -3,35 +3,37 @@
     <template is="bannerSwiper" data="{{...bannerSwiperConfig}}"/>
     <form bindsubmit="formSubmit">
         <view class="form">
-            <view class="input-group {{ formData.name.error ? 'error' : '' }} {{ formData.name.focused ? 'focused' : '' }}">
+            <view class="input-group">
                 <label>联系人</label>
-                <input type="text" class="{{ formData.name.focused ? 'focused' : '' }}" 
-                name="name" value="{{formData.name.value}}" data-name="name" placeholder="请输入您的姓名" 
+                <input type="text" name="name" value="{{formData.name.value}}" data-name="name" placeholder="请输入您的姓名" 
                 bindinput="updateFormData" bindfocus="onFocus" bindblur="formCheck"/>
-                <icon class="error-icon" type="cancel" color="red" size="16" 
-                hidden="{{!(formData.name.error && formData.name.focused)}}"/>
+                <view class="error-tips {{formData.name.error && formData.name.focused ? '' : 'hidden' }}">
+                    <icon type="warn" size="14"/><text>{{formData.name.tips}}</text>
+                </view>
             </view>
-            <view class="input-group {{ formData.phone.error ? 'error' : '' }} {{ formData.phone.focused ? 'focused' : '' }}">
+            <view class="input-group">
                 <label>联系电话</label>
                 <input type="text" name="phone" value="{{formData.phone.value}}" data-name="phone" placeholder="请输入您的电话号码" 
                 bindinput="updateFormData" bindfocus="onFocus" bindblur="formCheck"/>
-                <icon class="error-icon" type="cancel" color="red" size="16" 
-                hidden="{{!(formData.phone.error && formData.phone.focused)}}"/>
+                <view class="error-tips {{formData.phone.error && formData.phone.focused ? '' : 'hidden' }}">
+                    <icon type="warn" size="14"/><text>{{formData.phone.tips}}</text>
+                </view>
             </view>
-            <view class="input-group {{ formData.email.error ? 'error' : '' }} {{ formData.email.focused ? 'focused' : '' }}">
+            <view class="input-group">
                 <label>邮箱</label>
                 <input type="text" name="email" value="{{formData.email.value}}" data-name="email" placeholder="请输入您的电子邮箱" 
                 bindinput="updateFormData" bindfocus="onFocus" bindblur="formCheck"/>
-                <icon class="error-icon" type="cancel" color="red" size="16" 
-                hidden="{{!(formData.email.error && formData.email.focused)}}"/>
+                <view class="error-tips {{formData.email.error && formData.email.focused ? '' : 'hidden' }}">
+                    <icon type="warn" size="14"/><text>{{formData.email.tips}}</text>
+                </view>
             </view>
-            <view class="input-group {{ formData.word.error ? 'error' : '' }} {{ formData.word.focused ? 'focused' : '' }}">
+            <view class="input-group">
                 <label>留言</label>
-                <textarea name="word" value="{{formData.word.value}}" 
-                data-name="word" placeholder="请在这里填写您的定制要求" 
+                <textarea name="word" value="{{formData.word.value}}" data-name="word" placeholder="请在这里填写您的定制要求" 
                 bindinput="updateFormData" bindfocus="onFocus" bindblur="formCheck"/>
-                <icon class="error-icon" type="cancel" color="red" size="16" 
-                hidden="{{!(formData.word.error && formData.word.focused)}}"/>
+                <view class="error-tips {{formData.word.error && formData.word.focused ? '' : 'hidden' }}">
+                    <icon type="warn" size="14"/><text>{{formData.word.tips}}</text>
+                </view>
             </view>
         </view>
         <view class="msg">
